# weather_station

./: Cargo.toml  LICENSE  README.md  run.ps1  run.sh
src/: main.rs  oil.rs  stocks.rs  web.rs
static/: wx_station.css
templates/: chat.html  client.html  input.html  main.html  metar.html  output.html  practice.html  practice2.html  rotary.html  round_dial_input.html  taf.html  test.html  test_sse.html  users.html  wx_station.html  wx_station_async.html
