[package]
name = "wx_station"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
askama = "0.15.1"
async-std = "1.13.2"
async-stream = "0.3.6"
axum = {version = "0.8.8", features = ["multipart", "ws"]}
axum-extra = {version = "0.12.5", features = ["typed-header"] }
chrono = "0.4.43"
futures = "0.3.31"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.4.1"
json = "0.12.4"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }
rand = "0.9.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tap = "1.0.1"
tokio = { version = "1.0.48", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.21.0", features = ["v4"] }

[dev-dependencies]
eventsource-stream = "0.2"
reqwest = { version = "0.12", features = ["stream"] }
reqwest-eventsource = "0.6"
